--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
 
         <link rel="alternate" type="application/atom+xml" title=" Atom Feed" href="https://granary.io/url?input=html&output=atom&url=alldev.click">
 
-        <link rel="stylesheet" href="alldev.click/assets/styles.css">
+        <link rel="stylesheet" href="/assets/styles.css">
     </head>
     <body>
 <nav>
