--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
 
         <link rel="alternate" type="application/atom+xml" title=" Atom Feed" href="https://granary.io/url?input=html&output=atom&url=alldev.click">
 
-        <link rel="stylesheet" href="/assets/styles.css">
+        <link rel="stylesheet" href="assets/styles.css">
     </head>
     <body>
 <nav>
@@ -23,9 +23,9 @@
   </div>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/tools">Tools</a></li>
-    <li><a href="/blog">Blog</a></li>
-    <li><a href="/about">About</a></li>
+    <li><a href="tools/">Tools</a></li>
+    <li><a href="blog/">Blog</a></li>
+    <li><a href="about/">About</a></li>
   </ul>
 </nav>
 
